--- a/AdvisorApi/Views/Home/Index.cshtml
+++ b/AdvisorApi/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>@Model.msge
+    <p>@Model.msge+ " Make the bed,"
     </p>
 </div>
 
